edits to mapping Rmd

--- a/mapping_salmon.Rmd
+++ b/mapping_salmon.Rmd
@@ -1,32 +1,19 @@
 ---
-title: "Mapping using salmon"
+title: "Mapping and Counting"
 author: "Cheryl Logan"
 date: "4/4/2018"
 output: html_document
 ---
 
-Mapping to the Copper de novo transcriptome
+## Mapping to the Copper de novo transcriptome
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+Use RSEM and bowtie for mapping
+
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/util/align_and_estimate_abundance.pl \       # name of program
+--transcripts /home/data/rockfish/assemblies/Copper_Trinity_LT.fasta --seqType fq \ # assembly and seq type
+--samples_file /home/data/rockfish/EXP10_Scaur_fluct_gill/QC/samples_file_trimmo \  # samples_file location
+--est_method RSEM --aln_method bowtie --trinity_mode \                              # counting and mapping method
+--output_dir rsem_outdir                                                            # output directory
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
