--- a/trimmo.Rmd
+++ b/trimmo.Rmd
@@ -13,6 +13,8 @@ MacManes, M. D. (2014). On the optimal trimming of high-throughput mRNA sequence
 
 In the following example, we run Trimmomatic on 'example using 'CLMP001A_S52_L005_R1_001.fastq'
 
+(we will run this script on treebeard server)
+
 ```{bash, eval=FALSE}
 java -jar /opt/Trimmomatic-0.35/trimmomatic-0.35.jar SE \               # call program using SE option
 -phred33 \                                                              # Illumina quality score
@@ -35,7 +37,7 @@ Trimmomatic manual here:
  http://www.usadellab.org/cms/uploads/supplementary/Trimmomatic/TrimmomaticManual_V0.32.pdf
 
 ## Run Trimmomatic on all fastq files in a directory 
-(on treebeard server)
+(this script will be run on treebeard server)
 
 We will will use a for loop in bash
 
