--- a/mapping_RSEM_bowtie.Rmd
+++ b/mapping_RSEM_bowtie.Rmd
@@ -21,7 +21,6 @@ perl /opt/trinityrnaseq-Trinity-v2.4.0/util/align_and_estimate_abundance.pl \   
 
 first make a file.listing_target_files.txt using `nano`
 
-
 ```{bash, eval=FALSE}
 perl /opt/trinityrnaseq-Trinity-v2.4.0/util/abundance_estimates_to_matrix.pl \
 --est_method RSEM \
@@ -33,17 +32,56 @@ relaxation_rep1/RSEM.genes.results relaxation_rep2/RSEM.genes.results relaxation
 upwelling_rep1/RSEM.genes.results upwelling_rep2/RSEM.genes.results upwelling_rep3/RSEM.genes.results upwelling_rep4/RSEM.genes.results 
 ```
 
-## Download the output files to github 430 repo 
+## Compare Replicates
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/Analysis/DifferentialExpression/PtR \
+--matrix matrix.counts.matrix \
+--samples samples_file --CPM --log2 \
+--min_rowSums 10 \
+--compare_replicates
+```
 
-matrix.counts.matrix
-matrix.TMM.EXPR.matrix
-matrix.TPM.not_cross_norm
-matrix.TPM.not_cross_norm.TMM_info.txt
+## Compare Replicates Across Samples
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/Analysis/DifferentialExpression/PtR \
+--matrix Trinity_trans.counts.matrix \
+--min_rowSums 10 \
+-s samples_file --log2 --CPM --sample_cor_matrix
+```
+
+## Generate PCA Plot
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/Analysis/DifferentialExpression/PtR \
+--matrix matrix.counts.matrix \
+-s samples_file \
+--min_rowSums 10 --log2 \
+--CPM --center_rows \
+--prin_comp 3 
+```
+
+## Run Differential Gene Expression Analysis with edgeR
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/Analysis/DifferentialExpression/run_DE_analysis.pl  \
+--matrix matrix.counts.matrix \
+--method edgeR \
+--samples_file samples_file
+```
+
+## Identify DE genes with p-val and fold change cut-off
+```{bash, eval=FALSE}
+perl /opt/trinityrnaseq-Trinity-v2.4.0/Analysis/DifferentialExpression/analyze_diff_expr.pl \
+--matrix /home/data/rockfish/EXP10_Scaur_fluct_gill/QC/matrix.TMM.EXPR.matrix \
+-P 0.001 \
+-C 2 \
+--samples /home/data/rockfish/EXP10_Scaur_fluct_gill/QC/samples_file
+```
+
+## Download the output files to github 430 repo 
 
 First, open a new terminal window on home computer and use `scp` to secure copy these files to the bio430 github repository
 
 ```{bash, eval=FALSE}
-scp loga8761s@treebeard.csumb.edu:/home/data/rockfish/EXP10_Scaur_fluct_gill/QC/*matrix* /Users/loga8761/github/bio430  # use * wildcard to get all files with 'matrix'
+scp loga8761s@treebeard.csumb.edu:/home/data/rockfish/EXP10_Scaur_fluct_gill/QC/edgeR.40768.dir/* /Users/loga8761/github/bio430/edgeR.40768.dir/  # also get samples file
 ```
 
 ## From here, we will work in Rstudio 
