test to show my lab how to commit and push

--- a/merging.Rmd
+++ b/merging.Rmd
@@ -13,3 +13,4 @@ To do this, we will take advantage of the `tidyverse` package in RStudio. You on
 library(tidyverse) # after install.packages("tidyverse")
 ```
 
+test test testt  test
