fixed join code file names

--- a/merging.Rmd
+++ b/merging.Rmd
@@ -29,12 +29,12 @@ sed 's/ \+/,/g' Exp5_CGH_Trinity_annotated.txt > Exp5_CGH_Trinity_annotated.csv
  
 2. Sort and join two files in bash
 
-Let's say we want to extract the annotations for just our differentially expressed genes (DGElist). First we have to sort each .csv file by column 1 using `sort`. Then, we can `join` by column 1 assuming col 1 contains ContigNames:
+Let's say we want to extract the annotations for just our differentially expressed genes (DGElist). First we have to `sort` each .csv file by column 1. Then, we can `join` by column 1 assuming col 1 contains ContigNames:
 
 ```{bash, eval=FALSE, message = FALSE, warning = FALSE}
-sort -t , -k 1,1 big_annotation_file.csv > DGElist_sorted.csv
+sort -t , -k 1,1 DGElist.csv > DGElist_sorted.csv
 sort -t , -k 1,1 big_annotation_file.csv > big_annotation_file_sorted.csv
-join -j1 big_annotation_file_sorted.csv big_annotation_file_sorted.csv > annot_DGE.csv
+join -j1 DGElist_sorted.csv big_annotation_file_sorted.csv > annot_DGE.csv
 ```
  
 Now we have a much smaller file (annot_DGE.csv) containing the annotations for our DGE list only!
